      Generation of the file list in the Generator instead of the Worker.
  CR: HTTP(S) - Directory Index: Change from placeholder 'files' to 'file'
  CR: HTTP(S) - Directory Index: Omission of the formatting of the file size
      Approach: The directory index should only provide locale independent data.
      The formatting can later be done with CSS.      
  CR: Worker: Optimization / reduction of code
  CR: Remote: Optimization / reduction of code
  CR: Sources: Update of the comment format
  CR: XAPI: Integration of cascaded initialization
          e.g. com.seanox.xapi.Server > example.time.Sever
      The initialization of the components is not based on inheritance, instead
      it is based on the concatenation of calls, so that the function should be
      supported by all components in the cascade.
      The initialization is quasi delegated.
      The approach allows to use different constructors and to add additional
      ClassLoader layers independent of object-level inheritance.

5.2.0 20190502
  BF: HTTP(S) Correction
      - Basic Authentication / Digest Access Authentication: rules are used again case-insentive
  BF: Generator: Correction when rendering successive placeholders #[...]#[...]
  BF: HTTP(S) - Request: Optimization/correction for invalid requests/connections without data streams
  CR: Generator: Optimization / Review
      - Optimization: Handling of segments/scopes/fragements
        Improvement of dedicated and partial use
      - Omission of namespaces, replacement by the dedicated/partial use of segments
      - Change of syntax, omission of character ':' for segments   
        old: #[foo:[[...]]], new: #[foo[[...]]]
      - Enhancement by a deep/recursive processing of Hashtable + Collections  
      - Change of the parser/renderer:
        The template is initially prepared, the later addition of placeholders and/or
        segments is no longer supported.
  CR: HTTP(S) - AccessLog: Optimization