@@ -21,6 +21,7 @@
   CR: HTTP(S) - Directory Index: Omission of the formatting of the file size
       Approach: The directory index should only provide locale independent data.
       The formatting can later be done with CSS.      
+  CR: HTTP(S) - Directory Index: Realignment of the column 'type' 
   CR: Worker: Optimization / reduction of code
   CR: Remote: Optimization / reduction of code
   CR: Sources: Update of the comment format
